prefinal-edit batch 3: catch colon-format Companion-module notes in pre-final stripper
build_prefinal block-filter matched only '**Companion module (' (paren); 2 chapters use
'**Companion module:' (colon) -> leaked to pre-final/16 + /36. Widened to
(module|artifact)\b so all forms are stripped. pre-final rebuilt: 0 'Companion module'
leaks; Sources retained 47/47; drift clean.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Vn3iMLjGTQuUJJBaz5q8yp